# Project-Template-CPlusPlus

./: .gitignore  .gitmodules  CMakeLists.txt  config.cmake
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp
app/module-name/: CMakeLists.txt
app/module-name/inc/: ModuleName.hpp  ModuleNameExceptions.hpp  ModuleNameModule.hpp
app/module-name/src/: ModuleName.cpp
app/module-name/test/: CMakeLists.txt
app/module-name/test/rsc/: TestModuleName_method.cpp
app/module-name/test/src/: TestModuleName.cpp
app/modules/: CMakeLists.txt
app/modules/BasicModule/: BasicModuleTest.cpp  CMakeLists.txt  FindBasicModule.cmake
app/modules/ModuleName/: CMakeLists.txt  FindModuleName.cmake
app/modules/ModuleName/inc/: ModuleName.hpp  ModuleNameModule.hpp
app/modules/ModuleName/src/: ModuleNameExceptions.cpp
app/modules/ModuleName/test/: CMakeLists.txt
app/modules/ModuleName/test/inc/: TestModuleName.hpp
app/modules/ModuleName/test/rsc/: TestModuleName_method.cpp
app/modules/module-name/inc/: ModuleNameExceptions.hpp
app/modules/module-name/test/: CMakeLists.txt
cmake-files/functions/: AddAllSubDirs.cmake  AddAllSubdirsAsModule.cmake  AddTest.cmake  CMakeLists.txt  ConfigureFiles.cmake  FindOssLibraries.cmake  ImportAllModules.cmake  ImportModule.cmake  ListSubDirs.cmake
oss/googletest/: CMakeLists.txt  FindGoogleTest.cmake  GoogleTest.cmake
scripts/: CreateBasicSubmodule.sh
test/: CMakeLists.txt
